--- a/Thriftier/project.json
+++ b/Thriftier/project.json
@@ -4,7 +4,8 @@
     "debugType": "portable"
   },
   "dependencies": {
-     "NETStandard.Library": "1.6.0"
+     "NETStandard.Library": "1.6.0",
+     "System.Collections.Immutable": "1.3.1"
   },
   "frameworks": {
     "netstandard1.6": {
